competitions/mcpshsf-2023/kube/corncobs-sus-website.yaml
apiVersion: v1
kind: Service
metadata:
  name: corncobs-sus-website-svc
  namespace: challenges
  labels:
    app: corncobs-sus-website
spec:
  type: LoadBalancer
  ports:
  - port: 8001
    targetPort: 80
    protocol: TCP
  selector:
    app: corncobs-sus-website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corncobs-sus-website-svc
  namespace: challenges
  labels:
    app: corncobs-sus-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corncobs-sus-website
  template:
    metadata:
      labels:
        app: corncobs-sus-website
    spec:
      containers:
      - name: corncobs-sus-website
        image: robots_txt-302319325
        ports:
        - containerPort: 80
        imagePullPolicy: Never
        securityContext:
          runAsUser: 0
      imagePullSecrets:
      - name: regcred
