competitions/mcpshsf-2023/kube/madlibs.yaml
apiVersion: v1
kind: Service
metadata:
  name: madlibs-svc
  namespace: challenges
  labels:
    app: madlibs
spec:
  type: LoadBalancer
  ports:
  - port: 8003
    targetPort: 8080
    protocol: TCP
  selector:
    app: madlibs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: madlibs-svc
  namespace: challenges
  labels:
    app: madlibs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: madlibs
  template:
    metadata:
      labels:
        app: madlibs
    spec:
      containers:
      - name: madlibs
        image: temp_inj-304559849
        ports:
        - containerPort: 8080
        imagePullPolicy: Never
        securityContext:
          runAsUser: 0
          privileged: true
      imagePullSecrets:
      - name: regcred
